Added Codegen for nodeJS + latest Swagger
