# res/codegen/nodejs/controllers/Questionaire.js
@@ -1,0 +1,25 @@
+'use strict';
+
+var utils = require('../utils/writer.js');
+var Questionaire = require('../service/QuestionaireService');
+
+module.exports.getCatalogueItems = function getCatalogueItems (req, res, next) {
+  Questionaire.getCatalogueItems()
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.putCatalogueQuestion = function putCatalogueQuestion (req, res, next) {
+  var body = req.swagger.params['body'].value;
+  Questionaire.putCatalogueQuestion(body)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
